Bug 17605: Don't tab to anchor without an href.  r=harishd